# ground-truth

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  EVOLUTION.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_detection.py  batch_detection.py  custom_detector.py
src/groundtruth/: __init__.py  aggregator.py  base.py  models.py
src/groundtruth/detectors/: __init__.py  consistency.py  entailment.py  overlap.py
tests/: conftest.py  test_aggregator.py  test_consistency.py  test_coverage_gaps.py  test_entailment.py  test_error_hardening.py  test_models.py  test_overlap.py  test_performance.py  test_property_based.py  test_security.py
