[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groundtruth"
version = "0.1.0"
description = "Hallucination detector for LLM outputs using overlap, entailment, and consistency methods"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
transformers = [
    "transformers>=4.40",
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/groundtruth"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
